<resources>
    <string name="app_name">Star Wars</string>
    <string name="card_title_personagens">Personagens</string>
    <string name="card_title_filmes">Filmes</string>
    <string name="card_title_naves">Naves</string>
    <string name="card_title_veiculos">Veículos</string>
    <string name="card_title_especies">Espécies</string>
    <string name="card_title_planetas">Planetas</string>
    <string name="card_title_atracoes">Atrações</string>
    <string name="card_title_geolocalizacao">Localização</string>
    <string name="card_title_sua_localizacao">Sua Localização:</string>
    <string name="card_title_verificar_localizacao">Verificar Localização</string>
    <string name="endereco">"Endereço: %1$s  \n \n Horário: %4$tr"</string>
    <string name="loading">Carregando…</string>
    <string name="parar_busca">PARAR BUSCA</string>
    <string name="iniciar_busca">INICIAR</string>
    <string name="permissao_recusada">Permissão negada, autorize a aplicação </string>
    <string name="sem_localizacao">Localização Indisponível</string>
    <string name="hint_busca">Clique para iniciar a busca</string>
    <string name="sem_endereco">Endereço indisponível</string>
    <string name="coordenada_invalida">Coordenadas inválidas</string>
    <string name="servico_indisponivel">Serviço Indisponível</string>
</resources>